--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reactpractice",
   "version": "0.1.0",
+  "homepage": "https://vlada2020.github.io/Employee_Direct/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -9,6 +10,7 @@
     "axios": "^0.19.2",
     "moment": "^2.27.0",
     "express": "^4.17.1",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
